Resolve #203
-   Checkmarks appear for "Yes", blank space for "No"
    -   👉 _However, note:_ in the [original table from Plone](https://edrn-dev.jpl.nasa.gov/portal/5/dev/data-and-resources/sample-reference-sets), the columns for Follow-up Data and Image Files are _all "no"_, and so I recommend dropping these columns completely. The table is already too wide for 508 browser width (1200 pixels)
-   Header row stays at the top
-   Protocol ID is now a hyperlink to the protocol (a new feature that the Plone version didn't have)

--- a/src/edrn.theme/src/edrn/theme/static/edrn.theme/css/edrn-overlay.css
+++ b/src/edrn.theme/src/edrn/theme/static/edrn.theme/css/edrn-overlay.css
@@ -128,9 +128,6 @@ li.footer-inline-item:after {
     font-size: 16px;
     color: black;
 }
-thead {
-    background-color: rgb(198, 238, 238);
-}
 .site-section-card h3, .site-section-card h3, .site-section-card h2 {
     text-transform: uppercase;
 }
@@ -146,4 +143,19 @@ thead {
     padding: 0;
     text-decoration: none;
     color: rgb(0, 82, 125);
+}
+
+table {
+    text-align: left;
+    position: relative;
+}
+thead {
+    background-color: rgb(198, 238, 238);
+}
+th {
+    background-color: rgb(198, 238, 238) !important;
+    position: sticky;
+    top: 0;
+}
+.typed-table-manager {
 }
